  * add debian/patches/series for quilt
  * refresh debian/patches/bios_keyboard.cpp.patch
  * add debian/README.source with instructions how to produce the
    original tarball
  * add debian/patches/fix_spelling_errors.patch to fix some spelling
    errors discovered by Lintian
  * add debian/patches/fix_manpage_errors.patch to fix warnings that
    lintian found in dosbox.1

 -- Jan Dittberner <jandd@debian.org>  Sun, 29 Nov 2009 22:24:47 +0100

dosbox (0.72-1.1) unstable; urgency=low

  * Non-maintainer upload.
  * New patch which explicitly includes required headers to fix FTBFS with
    gcc-4.3.  Thanks to Joost Damad for the patch.  (Closes: #417159)

 -- James Vega <jamessan@debian.org>  Sun, 09 Mar 2008 12:35:53 -0400

dosbox (0.72-1) unstable; urgency=low

  * Include fixes from the 2 NMUs. (Closes: #415696, #417700, #375517, #361554)
  * 0.72 source appears fix to an old bug. (Closes: #432446)
  * Add a message to README.Debian concerning security (Closes: #458950)
  * Fix loading of french language file (Closes: #284907)
  * Integrate most of ubuntu .desktop changes: (Closes: #458089)
      - Fix name capitalization.
      - Remove extension from icon name.
        Change ca/de/en/es descriptions so that they refer to
        "applications" in general instead of "games".
  * Bump standards version to 3.7.3:
     - Move Homepage field to source stanza.
  * Changed to dephelper version 6
  * Added  Markus Schölzel as uploader

 -- Peter Veenstra <spiru@fmf.nl>  Sun, 02 Mar  2008 14:40:59 +0100

dosbox (0.72-0.1) unstable; urgency=low

  * Non-maintainer upload.
  * New upstream release
  * Fixed .desktop and menu

 -- Markus Schölzel <makke@sidux.com>  Mon, 17 Sep 2007 18:26:23 +0200

dosbox (0.71-0.1) unstable; urgency=low

  * Non-maintainer upload.
  * New upstream release (Closes: #415696, #417700)
  * Added .desktop (Closes: #375517, #361554)
  
 -- Markus Schölzel <makke@sidux.com>  Tue, 31 Jul 2007 17:35:47 +0200
