@@ -34,6 +34,7 @@ dosbox (0.73-1) UNRELEASED; urgency=low
     errors discovered by Lintian
   * add debian/patches/fix_manpage_errors.patch to fix warnings that
     lintian found in dosbox.1
+  * add DEP-3 descriptions to patches
 
  -- Jan Dittberner <jandd@debian.org>  Sun, 29 Nov 2009 22:24:47 +0100
 
